# cue

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_PROMPTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  RELEASING.md  SECURITY.md  agent-intake.json  llms-full.txt  llms.txt
.cursor/rules/: brood-aip.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
desktop/: package-lock.json  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  NATIVE_GLASS_SPIKE.md  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: README.md  aesthetic.md  agent-affordances.json  agent-runtime.md  agent-workflow-prd.md  agent_intake_roundtrip.sample.json  agent_intake_status.md  agent_quickstart.md  aip-1.schema.json  asset-provenance.md  benchmark-playbook.md  canvas-app-rewrite-prd.md  design-wave-layout-handoff.md  desktop.md  extensibility-and-orchestration-prd.md  game-dev-assets-prd.md  legacy-internals.md  local-magic-select-runtime.md  local-model-pack-implementation-plan.md  macos-local-private-image-editing.md  mother_gold_data_seed_checklist.md  param_forge_reference.md  prompt-diet-prd-internal.md  psd-export-slice.md  realtime_canvas_user_benefits_story.md  reference-first-image-editing.md  rewrite-parity-matrix.md  tabbed-sessions-v1-manual-qa.md  visibility-kpis.md  visual_prompting_v0.md  why-brood-matrix.md
docs/skills/: pan.md  (+17 more)
rust_engine/: ARCHITECTURE.md  Cargo.toml  README.md
rust_engine/crates/brood-cli/: Cargo.toml
rust_engine/crates/brood-cli/src/: main.rs
rust_engine/crates/brood-contracts/: Cargo.toml
rust_engine/crates/brood-contracts/src/: events.rs
rust_engine/crates/brood-contracts/src/chat/: intent_parser.rs
rust_engine/crates/brood-contracts/src/models/: mod.rs  registry.rs
rust_engine/crates/brood-contracts/src/providers/: mod.rs
rust_engine/crates/brood-contracts/src/runs/: artifacts.rs  feedback.rs  legacy.rs  mod.rs  paths.rs  receipts.rs  session.rs  summary.rs  timeline.rs
rust_engine/crates/brood-engine/: Cargo.toml
rust_engine/crates/brood-engine/src/: lib.rs
rust_engine/crates/cue-cli/: Cargo.toml
rust_engine/crates/cue-cli/src/: lib.rs  lib_impl.rs  main.rs
rust_engine/crates/cue-cli/src/export/: mod.rs
rust_engine/crates/cue-cli/src/observe/: canvas_context.rs  describe.rs  intent_icons.rs  mod.rs  preprocess.rs  prompts.rs
rust_engine/crates/cue-cli/src/observe/vision/: client.rs  mod.rs  prompts.rs  types.rs
rust_engine/crates/cue-cli/src/planning/: mod.rs
rust_engine/crates/cue-cli/src/realtime/: config.rs  errors.rs  mod.rs  retry.rs  sessions.rs  transport.rs
rust_engine/crates/cue-cli/tests/: realtime_config.rs  realtime_sessions.rs  realtime_transport.rs
rust_engine/crates/cue-contracts/: Cargo.toml
rust_engine/crates/cue-contracts/src/: events.rs  lib.rs
rust_engine/crates/cue-contracts/src/chat/: command_registry.rs  mod.rs
rust_engine/crates/cue-contracts/src/models/: selectors.rs
rust_engine/crates/cue-contracts/src/runs/: cache.rs  thread_manifest.rs
rust_engine/crates/cue-engine/: Cargo.toml
rust_engine/crates/cue-engine/resources/: default_pricing.json
rust_engine/crates/cue-engine/src/: lib.rs  runtime.rs
rust_engine/crates/cue-engine/src/core/: coordinator.rs  mod.rs  plan_preview.rs
rust_engine/crates/cue-engine/src/provider_foundation/: adapter.rs  mod.rs  pricing.rs  registry.rs  retry.rs
rust_engine/crates/cue-engine/src/providers/: fal.rs  flux.rs  gemini.rs  imagen.rs  mod.rs  openai.rs  replicate.rs  stability.rs
rust_engine/crates/cue-engine/src/providers/common/: http.rs  image.rs
scripts/: benchmark_magic_select_runtime.py  build_desktop.sh  check_agent_entrypoints.py  collect_install_funnel.sh  create_juggernaut_apple_worktrees.sh  create_juggernaut_design_worktrees.sh  create_juggernaut_worktrees.sh  dev_desktop.sh  dev_desktop_magic_select.sh  format_cue_logo.py  generate_juggernaut_rail_icons.mjs  generate_juggernaut_rail_icons.py  macos_clean_machine_smoke.sh  magic_select_mobile_sam.py  mother_gold_data_batch.py  prep_juggernaut_apple_worktrees.sh  prep_juggernaut_design_worktrees.sh  prep_juggernaut_worktrees.sh  release_check.sh  rewrite_verification_queue.mjs  setup_local_magic_select.sh  stage_rust_engine_binary.sh
(+275 files in other folders)
