[workspace]
members = [
  "crates/brood-cli",
  "crates/brood-contracts",
  "crates/brood-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Brood"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
indexmap = "2.12"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
similar = "2.7"
tempfile = "3.15"
tungstenite = { version = "0.28", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
uuid = { version = "1.13", features = ["v4"] }
