[package]
name = "juggernaut-desktop"
version = "0.2.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "1.5", features = ["api-all", "macos-private-api"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["clock"] }
image = "0.25"
url = "2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
