[package]
name = "brood-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "brood-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
brood-contracts = { path = "../brood-contracts" }
brood-engine = { path = "../brood-engine" }
clap = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
