[package]
name = "brood-contracts"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
similar = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
