[package]
name = "cue-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "cue-rs"
path = "src/main.rs"

[[bin]]
name = "brood-rs"
path = "src/bin/brood_rs_compat.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cue-contracts = { path = "../cue-contracts" }
cue-engine = { path = "../cue-engine" }
clap = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
