[package]
name = "cue-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cue-contracts = { path = "../cue-contracts" }
chrono = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
